# hifi

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
docs/: architecture.md
framework/: policies.toml
src/: app.rs  cache.rs  daemon.rs  discover.rs  fetch.rs  generated.rs  grep.rs  hash.rs  html.rs  json.rs  lib.rs  literal.rs  literals.rs  main.rs  processor.rs  scan.rs  source.rs  url.rs
src/app/: client.rs  completions.rs  render.rs
src/discover/: assets.rs  mod.rs
src/framework/: angular.rs  astro.rs  mod.rs  next.rs  nuxt.rs  remix.rs  resolve.rs  site.rs  sveltekit.rs
src/framework/next/: mod.rs  parser.rs
src/runtime/: bytes.rs  cache.rs  cache_writer.rs  concurrent.rs  config.rs  daemon.rs  engine.rs  error.rs  fetch.rs  fetch_root.rs  http.rs  mod.rs  net.rs  processor.rs
src/runtime/cache/: mod.rs
src/runtime/codec/: document.rs  mod.rs  wire.rs
src/runtime/http/: backpressure.rs  client.rs  error.rs  headers.rs  hpack.rs  http1.rs  mod.rs  origin.rs  request.rs  response.rs
src/runtime/http/h2/: frame.rs  mod.rs  read.rs  session.rs  window.rs  write.rs
src/runtime/net/: fetch.rs  mod.rs
src/scan/: anchors.rs  classify.rs  clients.rs  extract.rs  findings.rs  html.rs  literals.rs  mod.rs  next.rs  patterns.rs  shape.rs
src/util/: mod.rs  terminal.rs  url_input.rs
tests/: discover.rs  html.rs  scan.rs  url_parity.rs
