[package]
name = "hifi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "io-util", "sync"] }
aho-corasick = "1"
blake3 = "1"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
memchr = "2"
lru = "0.16"
mimalloc = { version = "0.1", default-features = false }
parking_lot = "0.12"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
thiserror = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.flamegraph]
inherits = "release"
debug = "line-tables-only"
strip = false

[profile.dev]
debug = 0
incremental = true

[profile.test]
debug = 0
incremental = true
